[gd_scene load_steps=4 format=3 uid="uid://dckcb5104b5bd"]

[ext_resource type="Script" path="res://scenes/weapons/weapon_manager.gd" id="1_te3qc"]
[ext_resource type="Script" path="res://component/hitbox_component.gd" id="2_ij8i7"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_eqwhc"]

[node name="WeaponManager" type="Node3D"]
script = ExtResource("1_te3qc")

[node name="WeaponMesh" type="MeshInstance3D" parent="."]
unique_name_in_owner = true

[node name="WeaponShadow" type="MeshInstance3D" parent="."]
unique_name_in_owner = true

[node name="HitboxComponent" type="Area3D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_ij8i7")

[node name="HitboxCollision" type="CollisionShape3D" parent="HitboxComponent"]
unique_name_in_owner = true
shape = SubResource("CapsuleShape3D_eqwhc")
